# wasm-opt-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  dummy-test-circle-ci  notes.md  publish.sh  test-ci-0.txt
.circleci/: config.yml
.github/workflows/: ci.yml
components/conformance-tests/: Cargo.toml  build.rs
components/conformance-tests/tests/: tests.rs
components/hello-world/: Cargo.toml
components/hello-world/src/: lib.rs
components/wasm-opt/: Cargo.toml
components/wasm-opt-cxx-sys/: Cargo.toml  build.rs
components/wasm-opt-cxx-sys/src/: build.rs  lib.rs  shims.h
components/wasm-opt-sys/: Cargo.toml  binaryen  build.rs  cc_cache.rs
components/wasm-opt-sys/src/: build.rs  lib.rs
components/wasm-opt/src/: api.rs  base.rs  builder.rs  fake_command.rs  features.rs  hello_world.wat  integration.rs  lib.rs  main.rs  passes.rs  profiles.rs  run.rs
components/wasm-opt/tests/: api_tests.rs  base_tests.rs  command_tests.rs  hello_world.wasm  tests.rs
