[package]
name = "conformance-tests"
version = "0.0.1-preview.3"
description = "Tests against binaryen"
license = "MIT / Apache-2.0"
edition = "2018"
publish = false

[build-dependencies]
anyhow = "1.0.58"

[dev-dependencies]
anyhow = "1.0.58"
wasm-opt = { path = "../wasm-opt", version = "0.0.1-preview.3" }
tempfile = "3.3.0"
