[package]
name = "conformance-tests"
version = "0.110.0-beta.1"
description = "Tests against binaryen"
license = "MIT / Apache-2.0"
edition = "2018"
publish = false

[build-dependencies]
anyhow = "1.0.58"

[dev-dependencies]
anyhow = "1.0.58"
wasm-opt = { path = "../wasm-opt", version = "0.110.0-beta.1" }
tempfile = "3.3.0"
