[package]
name = "wasm-opt-cxx-sys"
version = "0.0.1-preview.1"
description = "wasm-opt bindings via cxx"
license = "MIT / Apache-2.0"
edition = "2018"
documentation = "https://docs.rs/wasm-opt-cxx-sys"
repository = "https://github.com/brson/wasm-opt-rs"
readme = "../../README.md"

[dependencies]
anyhow = "1.0.58"
cxx = "1.0.72"
wasm-opt-sys = { path = "../wasm-opt-sys", version = "0.0.1-preview.1" }

[build-dependencies]
anyhow = "1.0.58"
cxx-build = { version = "1.0.72", features = ["parallel"] }
