[package]
name = "wasm-opt-sys"
version = "0.0.1-preview.3"
description = "Native wasm-opt build"
license = "MIT / Apache-2.0"
edition = "2018"
documentation = "https://docs.rs/wasm-opt-sys"
repository = "https://github.com/brson/wasm-opt-rs"
readme = "README.md"

[build-dependencies]
anyhow = "1.0.58"
cc = { version = "1.0.73", features = ["parallel"] }
regex = "1.6.0"

[dependencies]
