[package]
name = "wasm-opt"
version = "0.0.1-preview.3"
description = "wasm-opt bindings"
license = "MIT / Apache-2.0"
edition = "2018"
documentation = "https://docs.rs/wasm-opt"
repository = "https://github.com/brson/wasm-opt-rs"
categories = ["wasm"]
readme = "../../README.md"

[dependencies]
anyhow = "1.0.58"
libc = "0.2.126"
wasm-opt-sys = { path = "../wasm-opt-sys", version = "0.0.1-preview.3" }
wasm-opt-cxx-sys = { path = "../wasm-opt-cxx-sys", version = "0.0.1-preview.3" }
strum = "0.24"
strum_macros = "0.24"

[dev-dependencies]
tempfile = "3.3.0"
